<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/logoArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/mplus_rounded_1c_extra_bold"
        android:gravity="center_horizontal|top"
        android:text="@string/win_win"
        android:textAppearance="@style/win_win"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30sp"
        android:includeFontPadding="false"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idContainer"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_marginTop="50dp"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoArea"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/input_id"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:fontFamily="@font/notosans_text"
            android:textSize="12sp"
            android:includeFontPadding="false"
            android:textColor="@color/hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idContainer"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/input_pwd"
            android:inputType="textPassword"
            android:lines="1"
            android:textSize="12sp"
            android:includeFontPadding="false"
            android:fontFamily="@font/notosans_text"
            android:textColor="@color/hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_design"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordContainer"
        android:textStyle="bold"
        android:fontFamily="@font/notosans_text"
        android:includeFontPadding="false"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/findBtn"
        android:background="@color/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18sp"
        android:text="@string/find"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        android:textColor="#4E4E4E"
        android:fontFamily="@font/notosans_text"
        android:textSize="10sp"
        android:includeFontPadding="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/joinBtn"
        android:background="@color/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="30sp"
        android:textColor="#4E4E4E"
        android:fontFamily="@font/notosans_text"
        android:includeFontPadding="false" />

</androidx.constraintlayout.widget.ConstraintLayout>

<!--
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/findBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/clear"
        android:text="@string/find"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />-->